<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:oak="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:enabled="true"
        android:icon="@drawable/ic_menu_refresh"
        oak:showAsAction="ifRoom"
        android:visible="true">
    </item>
    <item
        android:id="@+id/add_course"
        android:title="@string/add"
        android:enabled="true"
        android:icon="@drawable/ic_menu_add"
        oak:showAsAction="ifRoom"
        android:visible="true">
    </item>

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:enabled="true"
        android:showAsAction="never"
        android:visible="true">
    </item>

    <item
        android:id="@+id/revoke_account_access"
        android:title="@string/revoke_account_access"
        android:enabled="true"
        android:showAsAction="never"
        android:visible="true">
    </item>
</menu>
