<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#dfdfdf">

    <ListView
        android:id="@+id/questionListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#dfdfdf"
    />

    <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/emptyView">

        <TextView
            android:id="@+id/emptyText"
            android:text="@string/no_questions_yet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            style="?android:textAppearanceMedium"
            android:textColor="#525252"
            android:background="#dfdfdf"
            android:visibility="gone"
            />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/question_text"
                android:hint="@string/new_question_hint"
                android:clickable="true"
                android:layout_weight="1"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_question"
                android:text="@string/submit"
                />

    </LinearLayout>

</LinearLayout>